Fixed temporary audio control panel spacing.

--- a/style.css
+++ b/style.css
@@ -150,5 +150,4 @@ button:active {
     margin-right: auto;
     margin-left: auto;
     display: block;
-    margin-top: 20px;
 }
